[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/dialogs/EditVersionDialog.gd" type="Script" id=1]

[node name="EditVersionDialog" type="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 0 )
popup_exclusive = true
window_title = ""
resizable = true
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1004.0
margin_bottom = 24.0
custom_constants/separation = 10

[node name="NameLabel" type="Label" parent="VBox/HBox"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Version Name:"

[node name="Name" type="LineEdit" parent="VBox/HBox"]
margin_left = 104.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 28.0
margin_right = 1004.0
margin_bottom = 52.0
custom_constants/separation = 10

[node name="LocationLabel" type="Label" parent="VBox/HBox2"]
margin_top = 5.0
margin_right = 58.0
margin_bottom = 19.0
text = "Location:"

[node name="Location" type="LineEdit" parent="VBox/HBox2"]
margin_left = 68.0
margin_right = 830.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Browse" type="Button" parent="VBox/HBox2"]
margin_left = 840.0
margin_right = 899.0
margin_bottom = 24.0
text = "Browse"

[node name="Show" type="Button" parent="VBox/HBox2"]
margin_left = 909.0
margin_right = 1004.0
margin_bottom = 24.0
text = "Show in Files"

[node name="Dialogs" type="Node" parent="."]

[node name="Browse" type="FileDialog" parent="Dialogs"]
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 600, 400 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/home/jwestman/Documents/hourglass"
current_path = "/home/jwestman/Documents/hourglass/"
[connection signal="text_changed" from="VBox/HBox/Name" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="VBox/HBox2/Location" to="." method="_on_Location_text_changed"]
[connection signal="pressed" from="VBox/HBox2/Browse" to="." method="_on_Browse_pressed"]
[connection signal="pressed" from="VBox/HBox2/Show" to="." method="_on_Show_pressed"]
[connection signal="file_selected" from="Dialogs/Browse" to="." method="_on_Browse_file_selected"]
